Bug 1153509 - Clipping translation notification bar on small screens. r=florian
UltraBlame original commit: 4ce4e5679cb811992db8549b57548796b7e4808d

--- a/browser/themes/shared/translation/infobar.inc.css
+++ b/browser/themes/shared/translation/infobar.inc.css
@@ -288,6 +288,28 @@ value
 translation
 "
 ]
+hbox
+[
+anonid
+=
+"
+details
+"
+]
+{
+overflow
+:
+hidden
+;
+}
+notification
+[
+value
+=
+"
+translation
+"
+]
 button
 notification
 [
